# cuda-optimizaer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  adaptive_sampler.cpp  adaptive_sampler.h  cuda_optimizer.cu  errors.h  generators.h  grid_searchers.h  i_kernel.h  kernels.cu  kernels.h  metrics.cpp  metrics.h  occupancy.h  optimizer.h  reporter.cpp  reporter.h  timer.h
src/examples/: add_strided_managed.cu  add_strided_managed.h  add_strided_unmanaged.cu  add_strided_unmanaged.h  add_unstrided_managed.cu  add_unstrided_managed.h  add_unstrided_unmanaged.cu  add_unstrided_unmanaged.h  euclidean_distance_strided.cu  euclidean_distance_strided.h  euclidean_distance_unstrided.cu  euclidean_distance_unstrided.h  matrix_multiply.cu  matrix_multiply.h
tests/: CMakeLists.txt  test_adaptive_sampler.cpp  test_generators.cpp  test_metrics.cpp  test_reporter.cpp
